Changed Advanced stats to an object in the API for players/stats, updated in doc
